Update 1. Setup Eclipse.md

--- a/1. Setup Eclipse.md
+++ b/1. Setup Eclipse.md
@@ -1,13 +1,14 @@
-# <center> Setup Eclipse 
-1. Download Eclipse from [title](https://www.eclipse.org/downloads/)
+# Setup Eclipse 
+
+ 1. Download [Eclipse](https://www.eclipse.org/downloads/)
 
 ![alt text](1.jpg)
-2. Open installer and follow to steps 
-<ul>
-  <li>Unzip file</li>
-  <li>Select a package to install</li>
-  <li>Select a folder to install</li>
-</ul>
 
-3. Use the Eclipse
+2. Open installer and follow to steps: 
+
+ * Unzip file
+ * Select a package to install
+ * Select a folder to install
+
+ 3. Use the Eclipse
 
